exercises/log-output/manifests/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-v1
  namespace: exercises
spec:
  selector:
    matchLabels:
      app: log-output
      version: v1
  template:
    metadata:
      labels:
        app: log-output
        version: v1
    spec:
      containers:
        - name: log-output-container
          image: thespeaker33/log-output
      volumeMounts:
      - name: log-output-volume
        mountPath: "/usr/src/app/files"
        readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-v2
  namespace: exercises
spec:
  selector:
    matchLabels:
      app: log-output
      version: v2
  template:
    metadata:
      labels:
        app: log-output
        version: v2
    spec:
      containers:
        - name: log-output-container
          image: thespeaker33/log-output
      volumeMounts:
      - name: log-output-volume
        mountPath: "/usr/src/app/files"
        readOnly: true
