exercises/log-output/manifests/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-gateway
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: log-output
    port: 5000
  rules:
  - backendRefs:
    - name: log-output-v1
      port: 5000
      weight: 75
    - name: log-output-v2
      port: 5000
      weight: 15
